# Cerces-Agent

./: .gitignore  BUILD.md  BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION.md  Makefile  README.md  anomaly_detector  anomaly_detector.cpp  build.sh  metrics_common.h  npu-monitor.cpp  requirements.txt  数据定义.md
Agent/: README.md
Agent/include/: AgentClient.h  MetricGenerator.h
Agent/src/: AgentClient.cpp  MetricGenerator.cpp  main.cpp
Anomaly Detection/: AlertManager.py  AnomalyDetectionController.py  ConfigManager.py  DataReceiver.py  README.md  RuleOrchestrator.py  main.py  requirements.txt
Anomaly Detection/DetectionEngine/: __init__.py  detection_engine.py
Anomaly Detection/DetectionEngine/ComparisonDetector/: __init__.py  comparison_detector.py  dp_group_communication_detector.py  flops_comparison_detector.py  history_comparison_detector.py  rank_communication_detector.py  throughput_comparison_detector.py
Anomaly Detection/DetectionEngine/MLDetector/: __init__.py  autoencoder_detector.py  feature_extractor.py  isolation_forest_detector.py  lof_detector.py  lstm_detector.py  ml_detector.py  one_class_svm_detector.py  transformer_detector.py
Anomaly Detection/DetectionEngine/StatisticalDetector/: __init__.py  cusum_detector.py  dp_group_communication_detector.py  flops_comparison_detector.py  history_comparison_detector.py  rank_communication_detector.py  sliding_window_detector.py  static_threshold_detector.py  statistical_detector.py  three_sigma_detector.py  throughput_comparison_detector.py
Anomaly Detection/common/: __init__.py  base_detector.py  data_structures.py
Communicator/: README.md
Communicator/include/: ConfigManager.h  DataTransformer.h  MessageQueue.h  NetworkManager.h  ProtocolHandler.h  PythonInterface.h  StructuredData.h
Communicator/src/: ConfigManager.cpp  DataTransformer.cpp  MessageQueue.cpp  NetworkManager.cpp  ProtocolHandler.cpp  PythonInterface.cpp  main.cpp
Visualization/: README.md  app.py  requirements.txt
Visualization/frontend/: index.html  main.js  styles.css
config/: communicator.conf
docs/: Design.md  Require.md  npu_monitor_algorithm.md  昇腾NPU分布式训练监测指标体系v2.0.md
proto/: monitor.proto
